# pw-hassgen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-release.yml  rust-test.yml
.sqlx/: query-7d3a0c07955cc394fd349b37d30c0c7f8ca66c8266e9d7f3884dd0c85261446c.json  query-f0996b1038662237d54480dcd22e5ba4a87b9908500214d5db242644f17fe089.json
queries/: get_node_ids.sql
src/: cfg_gen.rs  cfg_parse.rs  cli.rs  generator.rs  hass_cfg.rs  main.rs
src/hass/: mod.rs
