[package]
name = "pw-hassgen"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.95"
serde_yaml = "0.9.34"
serde_with = "3.12.0"
pretty_env_logger = "0.5.0"
log = { version = "0.4.25", features = ["std"] }
clap = { version = "4.5.27", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "macros",
] }
