[package]
name = "pw-hassgen"
version = "2.0.2"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "Home Assistant configuration generator for PixelWeather."
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pw-hassgen"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.98"
serde_yaml = "0.9.34"
serde_with = "3.12.0"
pretty_env_logger = "0.5.0"
log = { version = "0.4.27", features = ["std"] }
clap = { version = "4.5.28", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "macros",
] }
